--- a/index.html
+++ b/index.html
@@ -1,42 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health Lab.</title>
-    <link rel="shortcut icon" href="favico.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-</head>
-<header>
-    <div class="cabecalho">
-        <h1>Health Lab.</h1>
-        <h2>Sua saúde em boas mãos</h2>
-       
-        </a>
-    </div>
-</header>
-<body>
-    <main>
-        <div class="murais">
-            <div class="mural1">
-                <h2>Nossa história</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusamus inventore aperiam rerum nisi maiores perspiciatis assumenda, repellat tempore? Ducimus, rem beatae laborum dolor sapiente
-                possimus? Distinctio quis cum eaque repellat.</p>
-            </div>
-            <div class="mural2"><h2>Nossas areas de atuação</h2>
-                <ul>
-                    <li>Hematologia</li>
-                    <li>Bioquimica</li>
-                    <li>Imunologia</li>
-                    <li>Biologica molecular</li>
-                    <li>Teste de paternidade</li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TechLab.</title>
+    <link rel="shortcut icon" href="favico.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid nav-color">
+          <a class="navbar-brand text-light" href="#">TechLab.</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active text-light"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#">Quem somos</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-light"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Produtos
+                </a>
+                <ul class="dropdown-menu drop-color">
+                  <li>
+                    <a class="dropdown-item text-light" href="#">System Lab</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-light" href="#"
+                      >Laudo System</a
+                    >
+                  </li>
                 </ul>
-            </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" aria-disabled="true" href="#"
+                  >Contato</a
+                >
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Busque seu produto"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success text-light" type="submit">
+                Buscar
+              </button>
+            </form>
+          </div>
         </div>
-    </main>
-</body>
+      </nav>
+    </header>
+
+    <div class="container row d-flex g-4 mx-auto">
+      <div class="col-12 col-sm-12 col-md-6 col-xl-2 h-100">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="..." />
+          <div div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card’s content.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-xl-6 h-100">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
+            <div div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card’s content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
