--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       </nav>
     </header>
 
-    <div class="container row d-flex g-4 mx-auto">
-      <div class="col-12 col-sm-12 col-md-6 col-xl-2 h-100">
+    <div class="container row d-flex g-4 mx-auto p-5">
+      <div class="col-12 col-sm-12 col-md-6 col-xl-6 h-100 p-3 mx-auto">
         <div class="card">
           <img src="..." class="card-img-top" alt="..." />
           <div div class="card-body">
@@ -97,21 +97,42 @@
             </p>
           </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-xl-6 h-100">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
-              </p>
-            </div>
+      </div>
+      <div class="col-12 col-sm-12 col-md-6 col-xl-6 h-100 p-3 mx-auto">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="..." />
+          <div div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card’s content.
+            </p>
           </div>
         </div>
       </div>
     </div>
-
+    
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
